--- a/package.json
+++ b/package.json
@@ -21,5 +21,5 @@
   "bugs": {
     "url": "https://github.com/masatonakatsuji2021/hachiware_server_module_firewall/issues"
   },
-  "homepage": "https://github.com/masatonakatsuji2021/hachiware_server_module_firewall#readme"
+  "homepage": "https://hachiware-js.com/"
 }
